# llamadocx

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: tests.yml
docs/: api.md  index.html  index.md  installation.html  installation.md  usage.html  usage.md
docs/api/: index.html
examples/: basic_usage.py  cli_usage.sh  format_conversion.py  pdf_extraction.py  template_processing.py
llamadocx/: __init__.py  client.py  main.py  utils.py
src/: converters.py  docx.py  extractors.py  formatting.py  markdown.py  metadata.py  nlp.py  ocr.py  parsers.py  pdf.py  tables.py
src/llamadocx/: __init__.py  __main__.py  cli.py  convert.py  document.py  image.py  metadata.py  paragraph.py  search.py  style.py  table.py  template.py  utils.py
src/llamadocx/cli/: __init__.py  main.py
tests/: test_cli.py  test_client.py  test_comments.py  test_compare.py  test_convert.py  test_core.py  test_document.py  test_file_conversion.py  test_formatting.py  test_headers_footers.py  test_hyperlinks.py  test_image.py  test_lists.py  test_main.py  test_metadata.py  test_notes.py  test_protection.py  test_search.py  test_sections.py  test_styles.py  test_table.py  test_tables.py  test_template.py  test_track_changes.py  test_watermarks.py
